# UPS

./: .gitignore  README.md  env.template  pyproject.toml
UPS/: __init__.py  context.txt  main.py  meta_controller.py
UPS/evolver/: __init__.py  archive.py  config.py  engine.py  evaluators.py  graph.py  nodes.py  prompts.py  schemas.py  tools.py  utils.py  visualize.py
UPS/evolver/strategies/: __init__.py  crossover_operator.py  local_optimizer.py  novelty_generator.py  structural_mutator.py
UPS/solver/: __init__.py  config.py  engine.py  graph.py  nodes.py  prompts.py  schemas.py  tools.py  utils.py
