[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UPS"
version = "0.1.0"
description = "Universal Problem Solver with Solution Generation and Evolution"
authors = [{ name = "Gabriel Vasconcelos", email = "joao.vasconcelos@cloudwalk.io" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "scipy",
    "python-dotenv",
    "statsmodels",
    "xgboost",
    "lightgbm",
    "catboost",
    "transformers",
    "sentence-transformers",
    "jupyter",
    "datasets",
    "optuna",
    "hyperopt",
    "pillow",
    "opencv-python",
    "imageio",
    "jupyterlab",
    "notebook",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "starlette",
    "sse_starlette",
    "typing_extensions",
    "typing_inspection",
    "annotated_types",
    "ipykernel",
    "tqdm",
    "pyarrow",
    "openpyxl",
    "xlrd",
    "shap",
    "lime",
    "polars",
    "duckdb",
    "sqlalchemy",
    "joblib",
    "rich",
    "fastapi",
    "uvicorn",
    "langchain",
    "langgraph",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "langsmith",
    "langfuse",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
    "duckduckgo-search",
    "nltk",
    "spacy",
    "textblob",
    "wordcloud",
    "torch",
    "tokenizers",
    "stanza",
    "sumy",
    "bert-extractive-summarizer",
    "keybert",
    "rake-nltk",
    "jieba",
    "morfessor",
    "langdetect",
    "sacremoses",
    "huggingface-hub",
]

[tool.setuptools]
packages = ["UPS"] 